--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <data>
 
-        <import type="com.mashup.dionysos.Util" />
+        <import type="android.view.View" />
 
         <variable
-            name="mainVM"
-            type="com.mashup.dionysos.viewmodel.MainViewModel" />
+            name="timeVM"
+            type="com.mashup.dionysos.viewmodel.TimeViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/mai_margin_20"
-        android:layout_marginEnd="@dimen/mai_margin_20"
-        android:layout_marginTop="@dimen/mai_margin_16">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvToday"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/today"
-            android:textColor="@color/darkGrey"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tvTodayTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{Util.getTime(mainVM.mainModel.totalTime)}"
-            android:textColor="@color/darkGrey"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvToday" />
-
-        <ImageView
-            android:id="@+id/btnStartTimer"
-            android:layout_width="171dp"
-            android:layout_height="72dp"
-            android:layout_marginBottom="@dimen/mai_margin_32"
-            app:layout_constraintVertical_chainStyle="packed"
-            android:background="@color/colorPrimary"
-            app:layout_constraintBottom_toTopOf="@id/btnStopWatch"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
-        <ImageView
-            android:id="@+id/btnStopWatch"
-            android:layout_width="200dp"
-            android:layout_height="144dp"
-            android:layout_marginBottom="@dimen/mai_margin_16"
-            android:background="@color/colorAccent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        <FrameLayout
+            android:id="@+id/fragmentMainTap"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <include
             layout="@layout/item_global_bottom"
+            android:visibility="@{timeVM.showMainTapbar ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-        
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </FrameLayout>
 </layout>
