--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="darkGrey">#212226</color>
     <color name="white">#fff</color>
+    <color name="coral_pink">#fc5a6e</color>
 </resources>
