--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
     <dimen name="global_bottom_off_icon">64dp</dimen>
     <dimen name="main_margin_8">8dp</dimen>
     <dimen name="mai_margin_10">10dp</dimen>
+
+    <dimen name="text_24">24sp</dimen>
+    <dimen name="text_16">16sp</dimen>
+    <dimen name="text_14">14sp</dimen>
 </resources>
