--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="coralPink">#fc5a6e</color>
     <color name="azure">#1a96fc</color>
     <color name="coral_pink">#fc5a6e</color>
+
+    <color name="very_light_pink_70">#b3f2f2f2</color>
 </resources>
