--- a/app/src/main/res/layout/ranking_fragment.xml
+++ b/app/src/main/res/layout/ranking_fragment.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:text="Ranking"
+            android:textColor="#212226"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -26,14 +27,21 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/tab_background"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
-            app:tabGravity="center"
+            app:tabBackground="@drawable/tab_selector"
             app:tabIndicator="@null"
             app:tabMode="scrollable"
-            app:tabTextAppearance="@style/TabTextAppearanceLarge" />
+            app:tabPaddingEnd="16dp"
+            app:tabPaddingStart="16dp"
+            app:tabRippleColor="@null"
+            app:tabSelectedTextColor="#f2f2f2"
+            app:tabTextAppearance="@style/RankingTabTextAppearance" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
