--- a/app/src/main/res/layout/ranking_page_fragment.xml
+++ b/app/src/main/res/layout/ranking_page_fragment.xml
@@ -13,9 +13,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:src="@drawable/ic_profile_76dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:layout_width="wrap_content"
@@ -127,9 +127,16 @@
         app:constraint_referenced_ids="secondTime,thirdTime" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="16dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintTop_toBottomOf="@id/barrier" />
 
 
