--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,12 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="RankingTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#cdd0d4</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="TabTextAppearanceLarge" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">bold</item>
