--- a/app/src/main/res/layout/fragment_timer_setting.xml
+++ b/app/src/main/res/layout/fragment_timer_setting.xml
@@ -14,6 +14,9 @@
             type="com.mashup.dionysos.viewmodel.TimeViewModel" />
     </data>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -121,5 +124,9 @@
             android:onClick="@{()->timeVM.onClickTimerSettingSave()}"
             app:imageResource="@{timeVM.timerClickable.getTimerSettingBtn()}" />
     </LinearLayout>
-
+        <FrameLayout
+            android:id="@+id/fragment_time_setting"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
 </layout>
