--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="timeVM"
-            type="com.mashup.dionysos.viewmodel.TimeViewModel" />
+            type="com.mashup.dionysos.ui.main.TimeViewModel" />
     </data>
 
 
