--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="timeVM"
-            type="com.mashup.dionysos.viewmodel.TimeViewModel" />
+            type="com.mashup.dionysos.ui.main.TimeViewModel" />
     </data>
 
         <LinearLayout
