--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         <include
             bind:timeVM="@{timeVM}"
             layout="@layout/item_global_bottom"
-            android:visibility="@{timeVM.showMainTapbar ? View.VISIBLE : View.GONE, default=visible}"
+            android:visibility="@{timeVM.showMainTabBar ? View.VISIBLE : View.GONE, default=visible}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
