--- a/app/src/main/res/layout/fragment_timer_setting.xml
+++ b/app/src/main/res/layout/fragment_timer_setting.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <import type="android.view.View" />
 
         <import type="com.mashup.dionysos.Util" />
+
+        <import type="com.mashup.dionysos.ui.main.TimeViewModel.SelectFragment" />
 
         <variable
             name="timeVM"
