--- a/app/src/main/res/layout/activity_welcom.xml
+++ b/app/src/main/res/layout/activity_welcom.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="81dp"
         android:text="@string/welcom_title"
         android:textStyle="bold"
-        android:textColor="@color/darkGrey"
+        android:textColor="@color/dark_grey"
         android:textSize="@dimen/text_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
