--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/mai_margin_32"
                 android:text="@string/use_timeaps"
-                android:textColor="@color/darkGrey"
+                android:textColor="@color/dark_grey"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -34,7 +34,7 @@
                 android:layout_gravity="center"
                 android:layout_marginStart="@dimen/main_margin_8"
                 android:text="@string/use_timeaps_study"
-                android:textColor="@color/darkGrey"
+                android:textColor="@color/dark_grey"
                 android:textSize="15sp" />
 
             <LinearLayout
