--- a/app/src/main/res/layout/fragment_time_control.xml
+++ b/app/src/main/res/layout/fragment_time_control.xml
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{Util.getTimeH(timeVM.controlTime)}"
-                android:textColor="@color/darkGrey"
+                android:textColor="@color/dark_grey"
                 android:textSize="65sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{Util.getTimeMS(timeVM.controlTime)}"
-                android:textColor="@color/darkGrey"
+                android:textColor="@color/dark_grey"
                 android:textSize="65sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
