--- a/app/src/main/res/layout/item_total_time.xml
+++ b/app/src/main/res/layout/item_total_time.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/today"
-            android:textColor="@color/darkGrey"
+            android:textColor="@color/dark_grey"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{Util.getTime(timeVM.timeDataModel.totalTime)}"
-            android:textColor="@color/darkGrey"
+            android:textColor="@color/dark_grey"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
