--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,12 +3,17 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="darkGrey">#212226</color>
-    <color name="white">#fff</color>
-    <color name="lightBlueGrey">#cdd0d4</color>
-    <color name="coralPink">#fc5a6e</color>
+
     <color name="azure">#1a96fc</color>
+
+    <color name="dark_grey">#212226</color>
+
     <color name="coral_pink">#fc5a6e</color>
 
+    <color name="light_blue_grey">#cdd0d4</color>
+
+    <color name="very_light_pink">#f2f2f2</color>
     <color name="very_light_pink_70">#b3f2f2f2</color>
+
+    <color name="white">#fff</color>
 </resources>
