--- a/app/src/main/res/layout/activity_nickname.xml
+++ b/app/src/main/res/layout/activity_nickname.xml
@@ -10,47 +10,44 @@
         android:id="@+id/nickname_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/mai_margin_16"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
         android:text="@string/nickname_title"
         android:textColor="@color/dark_grey"
         android:textSize="@dimen/text_24"
+        android:lineSpacingExtra="12sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/nickname_edit_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="@string/here"
-        android:textSize="@dimen/text_16"
-        android:textColor="@color/dark_grey"
-        android:background="@android:color/transparent"
-        android:textCursorDrawable="@drawable/text_cursor"
-        android:inputType="textNoSuggestions|textVisiblePassword"
-        android:layout_marginStart="@dimen/mai_margin_16"
         android:layout_marginTop="@dimen/mai_margin_20"
-        android:layout_marginEnd="@dimen/mai_margin_16"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:color/transparent"
+        android:hint="@string/here"
+        android:inputType="textNoSuggestions|textVisiblePassword"
+        android:textColor="@color/dark_grey"
+        android:textCursorDrawable="@drawable/text_cursor"
+        android:textSize="@dimen/text_16"
+        app:layout_constraintStart_toStartOf="@+id/nickname_title_text"
         app:layout_constraintTop_toBottomOf="@+id/nickname_title_text" />
 
     <TextView
         android:id="@+id/ans_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/mai_margin_16"
-        android:layout_marginTop="@dimen/main_margin_8"
-        android:text="음......."
+        android:layout_marginTop="8dp"
         android:textColor="@color/coral_pink"
         android:textSize="@dimen/text_14"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/nickname_title_text"
         app:layout_constraintTop_toBottomOf="@+id/nickname_edit_text" />
 
     <ImageView
         android:id="@+id/ok_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_marginEnd="@dimen/mai_margin_16"
         android:layout_marginBottom="@dimen/mai_margin_16"
         android:src="@drawable/nickname_ok_btn"
