--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="text_16">16sp</dimen>
     <dimen name="text_14">14sp</dimen>
     <dimen name="mai_margin_36">36dp</dimen>
+    <dimen name="loginBtnHeight">44dp</dimen>
+    <dimen name="loginBtnMarginRow">30dp</dimen>
+    <dimen name="loginBtnText">19sp</dimen>
 </resources>
